--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,11 +9,12 @@
     <link rel="stylesheet" href="./css/main.css">
     <script src="https://kit.fontawesome.com/982f3bb3ad.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <div class=" mx-auto">
         <nav class="bg-green-500 flex justify-between lg:justify-start items-center">
             <div class="z-20  logo p-5 sm:w-1/2  md:w-1/3 lg:w-1/4">
-                <img  src="./images/logorickandmorty.png" alt="">
+                <img src="./images/logorickandmorty.png" alt="">
             </div>
             <div class="links lg:block hidden  w-1/6 md:w-4/6">
                 <ul class="menu flex items-center justify-center gap-5">
@@ -20,25 +22,78 @@
                     <li><a class="link" href="">Explore</a></li>
                     <li><a class="link" href="">Characters</a></li>
                     <li><a class="link" href="">Episodes</a></li>
-                    <li><a class="rounded-full bg-blue-400 px-2 py-3 text-white font-bold hover:bg-blue-500" href="">Contact me</a></li>
+                    <li><a class="rounded-full bg-blue-400 px-2 py-3 text-white font-bold hover:bg-blue-500"
+                            href="">Contact me</a></li>
                 </ul>
             </div>
             <div class="block lg:hidden  w-1/6 lg:w-4/6">
-                <i id="responsive-menu" class=" fas fa-bars link cursor-pointer" ></i>
+                <i id="responsive-menu" class=" fas fa-bars link cursor-pointer"></i>
 
                 <ul class=" md:pt-8 pt-12 responsive-links hidden w-full absolute z-10 left-0 text-center bg-green-500">
                     <li><a class="link" href="">Home</a></li>
                     <li><a class="link" href="">Explore</a></li>
                     <li><a class="link" href="">Characters</a></li>
                     <li><a class="link" href="">Episodes</a></li>
-                    <li><a class="mb-5 inline-block rounded-full bg-blue-400 px-2 py-3 text-white font-bold hover:bg-blue-500" href="">Contact me</a></li>
+                    <li><a class="mb-5 inline-block rounded-full bg-blue-400 px-2 py-3 text-white font-bold hover:bg-blue-500"
+                            href="">Contact me</a></li>
                 </ul>
             </div>
-
         </nav>
+
+        <section class="header">
+            <img src="./images/rick-and-morty---header-147026.jpg" alt="">
+        </section>
+
+        <section>
+            <div class="bg-wave-pattern h-6 bg-repeat-x relative -top-2"></div>
+            <div class="flex items-center justify-center">
+                <a class="m-2 mb-8 text-center text-green-500" href="">Ver todos los personajes</a>
+            </div>
+
+    </div>
+    </section>
+
+    <section class="p-5 body bg-green-500 ">
+
+        <div class="muestreo">
+
+            <article class="flex text-white bg-gray-600 character-container rounded-xl lg:w-6/6 md:w-3/6">
+                <div class= " w-48 character-image">
+                    <img class="h-full object-cover rounded-l-lg"  src="https://rickandmortyapi.com/api/character/avatar/198.jpeg" alt="">
+                </div>
+
+                <div class="m-5 character-information">
+                    <div class="section principal ">
+                        <h2 class="name" href="">name</h2>
+                        <span class="status"> <i class="text-green-600 fas fa-circle"></i> status - <b class="specie">specie</b> </span>
+                    </div>
+                    <div class="section ubication">
+                        <div class="section-location">
+                        <h5>Last Known location:</h5>
+                        <p>location</p>
+                        </div>
+                        <div class="section-location">
+                        <h5> First seen in:</h5>
+                        <p>The ABC's of Beth</p>
+                        </div>
+
+                    </div>
+
+                </div>
+            </article>
+
+            
+
+
+        </div>
+    </section>
+
     </div>
 
+
     <script src="./js/menu-responsive.js"></script>
+    <script src="./js/provider.js"></script>
 
 </body>
+
 </html>
